--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -4,18 +4,16 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="{% static 'img/favicon.ico' %}" rel="icon">
+<link href="{% static 'img/kadlogo.png' %}" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
 <!-- Icon Font Stylesheet -->
 <link href="{% static 'lib/fontawesome-free-6.1.1-web/css/all.min.css' %}" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
 <!-- Libraries Stylesheet -->
 <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
-<link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
 
 <!-- Customized Bootstrap Stylesheet -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
