INTEGRATED custom user admin model

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -6,99 +6,77 @@
           <span class="menu-title">Dashboard</span>
         </a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-          <i class="icon-layout menu-icon"></i>
-          <span class="menu-title">UI Elements</span>
+          <i class="icon-columns menu-icon"></i>
+          <span class="menu-title">Admin Account</span>
           <i class="menu-arrow"></i>
         </a>
         <div class="collapse" id="ui-basic">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-            <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-            <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Create</a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Manage</a></li>
           </ul>
         </div>
       </li>
+
+
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
-          <i class="icon-columns menu-icon"></i>
-          <span class="menu-title">Form elements</span>
+          <i class="icon-contract menu-icon"></i>
+          <span class="menu-title">Payments</span>
           <i class="menu-arrow"></i>
         </a>
         <div class="collapse" id="form-elements">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">View</a></li>
           </ul>
         </div>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
+        <a class="nav-link" data-toggle="collapse" href="#form-elementss" aria-expanded="false" aria-controls="form-elements">
           <i class="icon-bar-graph menu-icon"></i>
-          <span class="menu-title">Charts</span>
+          <span class="menu-title">Organizations</span>
           <i class="menu-arrow"></i>
         </a>
-        <div class="collapse" id="charts">
+        <div class="collapse" id="form-elementss">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Manage</a></li>
           </ul>
         </div>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-          <i class="icon-grid-2 menu-icon"></i>
-          <span class="menu-title">Tables</span>
+        <a class="nav-link" data-toggle="collapse" href="#form-elementssss" aria-expanded="false" aria-controls="form-elements">
+          <i class="icon-layout menu-icon"></i>
+          <span class="menu-title">Results</span>
           <i class="menu-arrow"></i>
         </a>
-        <div class="collapse" id="tables">
+        <div class="collapse" id="form-elementssss">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Upload</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Manage</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Verify</a></li>
           </ul>
         </div>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-          <i class="icon-contract menu-icon"></i>
-          <span class="menu-title">Icons</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="icons">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+        <a class="nav-link" href="pages/documentation/documentation.html">
           <i class="icon-head menu-icon"></i>
-          <span class="menu-title">User Pages</span>
-          <i class="menu-arrow"></i>
+          <span class="menu-title">Profile</span>
         </a>
-        <div class="collapse" id="auth">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-            <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
-          </ul>
-        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-          <i class="icon-ban menu-icon"></i>
-          <span class="menu-title">Error pages</span>
-          <i class="menu-arrow"></i>
-        </a>
-        <div class="collapse" id="error">
-          <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
-          </ul>
-        </div>
-      </li>
+
       <li class="nav-item">
         <a class="nav-link" href="pages/documentation/documentation.html">
           <i class="icon-paper menu-icon"></i>
-          <span class="menu-title">Documentation</span>
+          <span class="menu-title">Logout</span>
         </a>
       </li>
+      
     </ul>
 </nav>
