--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -23,7 +23,7 @@
                 <div class="justify-content-end d-flex">
                 <div class="dropdown flex-md-grow-1 flex-xl-grow-0">
                   <button class="btn btn-sm btn-light bg-white" type="button">
-                    <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)
+                    <i class="mdi mdi-calendar"></i> Today {{ time }}
                   </button>
                 </div>
                 </div>
@@ -55,7 +55,7 @@
               <div class="col-md-6 mb-4 stretch-card transparent">
                 <div class="card card-tale">
                   <div class="card-body">
-                    <p class="mb-4">Today’s Bookings</p>
+                    <p class="mb-4">Registerd Admin</p>
                     <p class="fs-30 mb-2">4006</p>
                     <p>10.00% (30 days)</p>
                   </div>
@@ -64,7 +64,7 @@
               <div class="col-md-6 mb-4 stretch-card transparent">
                 <div class="card card-dark-blue">
                   <div class="card-body">
-                    <p class="mb-4">Total Bookings</p>
+                    <p class="mb-4">Uploaded Certificate</p>
                     <p class="fs-30 mb-2">61344</p>
                     <p>22.00% (30 days)</p>
                   </div>
@@ -75,7 +75,7 @@
               <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
                 <div class="card card-light-blue">
                   <div class="card-body">
-                    <p class="mb-4">Number of Meetings</p>
+                    <p class="mb-4">Total Searched Record</p>
                     <p class="fs-30 mb-2">34040</p>
                     <p>2.00% (30 days)</p>
                   </div>
