--- a/templates/auth/manage_admin.html
+++ b/templates/auth/manage_admin.html
@@ -20,160 +20,43 @@
                 <p class="card-description">
                   use the table to edit, view and delete
                 </p>
+                {% if object_list %}
                 <div class="table-responsive">
-                  <table class="table table-striped">
-                    <thead>
+                  <table class="table table-striped table-sm table-hover">
+                    <thead class="text-center">
                       <tr>
+                        <th>#</th>
                         <th>User</th>
                         <th>First name</th>
-                        <th>
-                          Progress
-                        </th>
-                        <th>
-                          Amount
-                        </th>
-                        <th>
-                          Deadline
-                        </th>
+                        <th>Last name</th>
+                        <th>Phone</th>
+                        <th>Email</th>
+                        <th>Action</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="text-center">
+                      {% for user in object_list  %}
                       <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face1.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          Herman Beck
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $ 77.99
-                        </td>
-                        <td>
-                          May 15, 2015
-                        </td>
+                        <td>{{ forloop.counter }}</td>
+                        <td class="py-1"> <img src="{% if user.picture.url != '' %} {{ user.picture.url }} {% else %} {% static 'img/user.png' %} {% endif %}" alt="image"/></td>
+                        <td>{{ user.firstname }}</td>
+                        <td>{{ user.lastname }}</td>
+                        <td>{{ user.phone }}</td>
+                        <td>{{ user.email }}</td>
+                        <td><a href="" class="btn btn-outline-danger btn-sm">Delete <i class="fa fa-trash"></i></a></td>
                       </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face2.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          Messsy Adam
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $245.30
-                        </td>
-                        <td>
-                          July 1, 2015
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face3.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          John Richards
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $138.00
-                        </td>
-                        <td>
-                          Apr 12, 2015
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face4.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          Peter Meggik
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $ 77.99
-                        </td>
-                        <td>
-                          May 15, 2015
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face5.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          Edward
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $ 160.25
-                        </td>
-                        <td>
-                          May 03, 2015
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face6.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          John Doe
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $ 123.21
-                        </td>
-                        <td>
-                          April 05, 2015
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="py-1">
-                          <img src="../../images/faces/face7.jpg" alt="image"/>
-                        </td>
-                        <td>
-                          Henry Tom
-                        </td>
-                        <td>
-                          <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </td>
-                        <td>
-                          $ 150.00
-                        </td>
-                        <td>
-                          June 16, 2015
-                        </td>
-                      </tr>
+                      {% endfor %}
                     </tbody>
                   </table>
                 </div>
+                {% else %}
+                <div class="row">
+                  <div class="mx-auto mt-5">
+                    <p class="lead text-center">No Admin Record</p>
+                    <a href="{% url 'auth:create_admin' %}" class="btn btn-outline-success btn-sm mt-3 ml-4">Create Admin</a>
+                  </div>
+                </div>
+                {% endif %}
               </div>
             </div>
           </div>
