--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -22,7 +22,7 @@
       </li>
 
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
           <i class="icon-contract menu-icon"></i>
           <span class="menu-title">Payments</span>
@@ -33,7 +33,7 @@
             <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">View</a></li>
           </ul>
         </div>
-      </li>
+      </li> -->
 
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#form-elementss" aria-expanded="false" aria-controls="form-elements">
