implemented logout of user

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,10 +14,11 @@
               <div class="brand-logo">
                 <h3>
                   <a href="{% url 'e_verify:home' %}" style="text-decoration: none;" class="text-dark"><img src="{% static 'img/kadlogo.png' %}" alt="logo" style="width:50px !important"> Kadploy e-Verify</a>
-                  </h3>
+                </h3>
               </div>
               <h4>Hello! let's get started</h4>
               <h6 class="font-weight-light">Sign in to continue.</h6>
+              {% include "partials/messages.html" %}
               <form class="pt-3" method="post">
                 {% csrf_token %}
                 <div class="form-group">
