--- a/templates/auth/create_admin.html
+++ b/templates/auth/create_admin.html
@@ -14,6 +14,7 @@
     <div class="main-panel">
       <div class="content-wrapper">
         <div class="row">
+          {% include "partials/messages.html" %}
           <div class="col-md-6 grid-margin stretch-card mx-auto">
             <div class="card">
               <div class="card-body">
