--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -14,6 +14,7 @@
       <div class="content-wrapper">
         <div class="row">
           <div class="col-md-12 grid-margin">
+            {% include "partials/messages.html" %}
             <div class="row">
               <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                 <h3 class="font-weight-bold">Welcome Aamir</h3>
