--- a/templates/auth/manage_admin.html
+++ b/templates/auth/manage_admin.html
@@ -13,6 +13,7 @@
     <div class="main-panel">
       <div class="content-wrapper">
         <div class="row">
+          {% include "partials/messages.html" %}
           <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
               <div class="card-body">
@@ -37,7 +38,7 @@
                     <tbody class="text-center">
                       {% for user in object_list  %}
                       <tr>
-                        <td>{{ forloop.counter }}</td>
+                        <td><b>{{ forloop.counter }}</b></td>
                         <td class="py-1"> <img src="{% if user.picture.url != '' %} {{ user.picture.url }} {% else %} {% static 'img/user.png' %} {% endif %}" alt="image"/></td>
                         <td>{{ user.firstname }}</td>
                         <td>{{ user.lastname }}</td>
