--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -24,17 +24,20 @@
       <ul class="navbar-nav navbar-nav-right">
         <li class="nav-item nav-profile dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-            <img src="{% static 'auth/images/faces/face28.jpg' %}" alt="profile"/>
+            <img src="{% if request.user.picture.url != '' %} {{ request.user.picture.url }} {% else %} {% static 'img/user.png' %} {% endif %}" alt="profile"/>
           </a>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
             <a class="dropdown-item">
               <i class="ti-settings text-primary"></i>
               Settings
             </a>
-            <a class="dropdown-item">
-              <i class="ti-power-off text-primary"></i>
-              Logout
-            </a>
+            <form action="{% url 'auth:logout' %}" method="post" id="form">
+              {% csrf_token %}
+              <a class="dropdown-item" style="cursor: pointer;" onclick="form.submit()">
+                <i class="ti-power-off text-primary"></i>
+                Logout
+              </a>
+            </form>
           </div>
         </li>
       </ul>
