--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -21,7 +21,6 @@
         </div>
       </li>
 
-
       <!-- <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
           <i class="icon-contract menu-icon"></i>
@@ -43,8 +42,8 @@
         </a>
         <div class="collapse" id="form-elementss">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Register</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Manage</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'auth:create_org' %}">Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'auth:manage_org' %}">Manage</a></li>
           </ul>
         </div>
       </li>
