--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -31,13 +31,10 @@
               <i class="ti-settings text-primary"></i>
               Settings
             </a>
-            <form action="{% url 'auth:logout' %}" method="post" id="form">
-              {% csrf_token %}
-              <a class="dropdown-item" style="cursor: pointer;" onclick="form.submit()">
+              <a class="dropdown-item" style="cursor: pointer;" data-toggle="modal" data-target="#basicModal">
                 <i class="ti-power-off text-primary"></i>
                 Logout
               </a>
-            </form>
           </div>
         </li>
       </ul>
@@ -46,3 +43,25 @@
       </button>
     </div>
   </nav>
+
+
+  <!-- Logout Modal-->
+<div class="modal fade" id="basicModal" style="display: none;" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Ready to Leave?</h5>
+              <button type="button" class="close" data-dismiss="modal"><span>×</span>
+              </button>
+          </div>
+          <div class="modal-body">Select "Log Out" below if you are ready to end your current session.</div>
+          <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Cancel</button>
+              <form action="{% url 'auth:logout' %}" method="POST">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-warning btn-block">Log out</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
