--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -75,13 +75,10 @@
           <i class="icon-paper menu-icon"></i>
           <span class="menu-title">Logout</span>
         </a> -->
-        <form action="{% url 'auth:logout' %}" method="post" id="form">
-          {% csrf_token %}
-          <a class="nav-link" style="cursor: pointer;" onclick="form.submit()">
-            <i class="icon-paper menu-icon"></i>
-            Logout
-          </a>
-        </form>
+        <a class="nav-link"  style="cursor: pointer;" data-toggle="modal" data-target="#basicModal">
+          <i class="icon-paper menu-icon"></i>
+          Logout
+        </a>
       </li>
 
 
