implemented delete admin users

--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -17,7 +17,15 @@
             {% include "partials/messages.html" %}
             <div class="row">
               <div class="col-12 col-xl-8 mb-4 mb-xl-0">
-                <h3 class="font-weight-bold">Welcome Aamir</h3>
+                <h3 class="font-weight-bold">Welcome
+
+                  {% if user.organization %}
+                  {{ user.organization }}
+                  {% else %}
+                  {{ user.firstname }} {{ user.lastname }}
+                  {% endif %}
+
+                  </h3>
                 <h6 class="font-weight-normal mb-0">All systems are running smoothly!</h6>
               </div>
               <div class="col-12 col-xl-4">
