--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -56,7 +56,7 @@
           </div>
           <div class="modal-body">Select "Log Out" below if you are ready to end your current session.</div>
           <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Cancel</button>
+              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
               <form action="{% url 'auth:logout' %}" method="POST">
                   {% csrf_token %}
                   <button type="submit" class="btn btn-warning btn-block">Log out</button>
