--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -64,7 +64,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="pages/documentation/documentation.html">
+        <a class="nav-link" href="{% url 'auth:profile' request.user.pk %}">
           <i class="icon-head menu-icon"></i>
           <span class="menu-title">Profile</span>
         </a>
