implement RESULT upload feature

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -56,8 +56,8 @@
         </a>
         <div class="collapse" id="form-elementssss">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Upload</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Manage</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'auth:upload_result' %}">Upload</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'auth:manage_result' %}">Manage</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Verify</a></li>
           </ul>
         </div>
