--- a/templates/auth/manage_result.html
+++ b/templates/auth/manage_result.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %} Manage Result{% endblock %}
 {% block head %}
   {% include "partials/auth_head.html" %}
@@ -15,68 +16,14 @@
         <div class="row">
           <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
-              {% include "partials/messages.html" %}
               <div class="card-body">
-                <h4 class="card-title">Manage Kadpoly e-Verify Organization Users</h4>
+                <h4 class="card-title">Manage Kadpoly e-Verify Uploaded Result</h4>
                 <p class="card-description">
                   use the table to edit, view and delete
                 </p>
-                {% if object_list %}
-                <div class="table-responsive">
-                  <table class="table table-striped table-sm table-hover">
-                    <thead class="text-center">
-                      <tr>
-                        <th>#</th>
-                        <th>User</th>
-                        <th>Company name</th>
-                        <th>Phone</th>
-                        <th>Email</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                    <tbody class="text-center">
-                      {% for user in object_list  %}
-                      <tr>
-                        <td><b>{{ forloop.counter }}</b></td>
-                        <td class="py-1"> <img src="{% if user.picture.url != '' %} {{ user.picture.url }} {% else %} {% static 'img/user.png' %} {% endif %}" alt="image"/></td>
-                        <td>{{ user.organization }}</td>
-                        <td>{{ user.phone }}</td>
-                        <td>{{ user.email }}</td>
-                        <td>
-                          <a href="" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ user.acct_id}}">Delete <i class="fa fa-trash"></i></a>
-                          <div class="modal fade" id="delete{{ user.acct_id}}" style="display: none;" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">Delete....are you sure?</h5>
-                                        <button type="button" class="close" data-dismiss="modal"><span>×</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">Select "Delete" below if you want to delete user: <b> {{ user.organization }}</b>.</div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                                        <form action="" method="POST">
-                                            {% csrf_token %}
-                                            <button type="submit" class="btn btn-warning btn-block">Delete</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                          </div>
-                        </td>
-                      </tr>
-                      {% endfor %}
-                    </tbody>
-                  </table>
+                <div hx-get="{% url 'auth:list_result' %}" hx-trigger="load, listChanged from:body">
+
                 </div>
-                {% else %}
-                <div class="row">
-                  <div class="mx-auto mt-5">
-                    <p class="lead text-center">No User Record</p>
-                    <a href="{% url 'auth:create_org' %}" class="btn btn-outline-success btn-sm mt-3 ml-4">Create Users</a>
-                  </div>
-                </div>
-                {% endif %}
               </div>
             </div>
           </div>
@@ -86,5 +33,25 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="result" style="display: none;" aria-hidden="true">
+  <div class="modal-dialog" id="resultDialog" role="document" hx-target="this">
+
+  </div>
+</div>
 {% include "partials/auth_script.html" %}
+<script>
+  var modal = new bootstrap.Modal(document.getElementById('result'))
+
+  htmx.on('htmx:afterSwap', (e) => {
+    if (e.detail.target.id === 'resultDialog'){
+      modal.show();
+    }
+  })
+
+  htmx.on('htmx:beforeSwap', (e) => {
+    if (e.detail.target.id === 'resultDialog' && !e.detail.xhr.response){
+      modal.hide();
+    }
+  })
+  </script>
 {% endblock %}
