--- a/templates/partials/auth_script.html
+++ b/templates/partials/auth_script.html
@@ -10,6 +10,7 @@
 <script src="{% static 'auth/js/settings.js' %}"></script>
 <script src="{% static 'auth/js/todolist.js' %}"></script>
 <script src="{% static 'auth/js/dashboard.js' %}"></script>
+<script src="{% static 'js/htmx.min.js' %}"></script>
 <script src="{% static 'auth/js/Chart.roundedBarCharts.js' %}"></script>
 <script>
     window.setTimeout(function() {
