implemented dynamic result search

--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -17,7 +17,7 @@
                 <i class="icon-search"></i>
               </span>
             </div>
-            <input type="text" class="form-control" id="navbar-search-input" placeholder="Search Result here" aria-label="search" aria-describedby="search">
+            <input type="text" class="form-control" id="navbar-search-input" placeholder="Enter Certificate No." aria-label="search" aria-describedby="search">
           </div>
         </li>
       </ul>
