--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -58,7 +58,7 @@
           <ul class="nav flex-column sub-menu">
             <li class="nav-item"><a class="nav-link" href="{% url 'auth:upload_result' %}">Upload</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'auth:manage_result' %}">Manage</a></li>
-            <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Verify</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'auth:verify_result' %}">Verify</a></li>
           </ul>
         </div>
       </li>
