implemented login nav search to synchronize with page search

--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -18,13 +18,11 @@
             <div class="row">
               <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                 <h3 class="font-weight-bold">Welcome
-
                   {% if user.organization %}
                   {{ user.organization }}
                   {% else %}
                   {{ user.firstname }} {{ user.lastname }}
                   {% endif %}
-
                   </h3>
                 <h6 class="font-weight-normal mb-0">All systems are running smoothly!</h6>
               </div>
@@ -64,8 +62,8 @@
               <div class="col-md-6 mb-4 stretch-card transparent">
                 <div class="card card-tale">
                   <div class="card-body">
-                    <p class="mb-4">Registerd Admin</p>
-                    <p class="fs-30 mb-2">4006</p>
+                    <p class="mb-4">Registered Admin</p>
+                    <p class="fs-30 mb-2">{{ admin }}</p>
                     <p>10.00% (30 days)</p>
                   </div>
                 </div>
@@ -74,7 +72,7 @@
                 <div class="card card-dark-blue">
                   <div class="card-body">
                     <p class="mb-4">Uploaded Certificate</p>
-                    <p class="fs-30 mb-2">61344</p>
+                    <p class="fs-30 mb-2">{{ cert }}</p>
                     <p>22.00% (30 days)</p>
                   </div>
                 </div>
@@ -94,7 +92,7 @@
                 <div class="card card-light-danger">
                   <div class="card-body">
                     <p class="mb-4">Number of Clients</p>
-                    <p class="fs-30 mb-2">47033</p>
+                    <p class="fs-30 mb-2">{{ clients }}</p>
                     <p>0.22% (30 days)</p>
                   </div>
                 </div>
