made the UI uniform

--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -64,7 +64,7 @@
                   <div class="card-body">
                     <p class="mb-4">Registered Admin</p>
                     <p class="fs-30 mb-2">{{ admin }}</p>
-                    <p>10.00% (30 days)</p>
+                    <p>(verified)</p>
                   </div>
                 </div>
               </div>
@@ -73,7 +73,7 @@
                   <div class="card-body">
                     <p class="mb-4">Uploaded Certificate</p>
                     <p class="fs-30 mb-2">{{ cert }}</p>
-                    <p>22.00% (30 days)</p>
+                    <p>(verified)</p>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                   <div class="card-body">
                     <p class="mb-4">Total Searched Record</p>
                     <p class="fs-30 mb-2">34040</p>
-                    <p>2.00% (30 days)</p>
+                    <p>(verified)</p>
                   </div>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                   <div class="card-body">
                     <p class="mb-4">Number of Clients</p>
                     <p class="fs-30 mb-2">{{ clients }}</p>
-                    <p>0.22% (30 days)</p>
+                    <p>(verified)</p>
                   </div>
                 </div>
               </div>
