--- a/templates/auth/verify_result.html
+++ b/templates/auth/verify_result.html
@@ -25,14 +25,14 @@
                           <label for="">Certificate Number</label>
                           <input type="number" name="search" value="{{qs}}" class="form-control" required placeholder="Enter Certificate Number">
                         </div>
-                        <button type="submit" class="btn btn-success mt-3">Validate Result</button>
+                        <button type="submit" class="btn text-white mt-3" style="background-color: #00B98E;">Validate Result</button>
                       </form>
                     </div>
                 </div>
               </div>
             </div>
             <div class="col-md-8 col-lg-8 col-xl-8">
-              <div class="card" style="background-color: rgb(84, 167, 84);">
+              <div class="card" style="background-color: #00B98E;">
                 <div class="card-body">
                   <h4 class="card-title text-white">Result Preview</h4>
                   <div class="card" id="display">
