--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -30,9 +30,9 @@
             <img src="{% if request.user.picture.url != '' %} {{ request.user.picture.url }} {% else %} {% static 'img/user.png' %} {% endif %}" alt="profile"/>
           </a>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-            <a class="dropdown-item">
+            <a class="dropdown-item" href="{% url 'auth:profile' request.user.pk %}">
               <i class="ti-settings text-primary"></i>
-              Settings
+              Profile
             </a>
               <a class="dropdown-item" style="cursor: pointer;" data-toggle="modal" data-target="#basicModal">
                 <i class="ti-power-off text-primary"></i>
