--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -22,7 +22,7 @@
                 <div class="col-lg-6 text-center text-lg-start">
                     <h1 class="text-white mb-4 animated zoomIn">This Portal Verifies Academic Results</h1>
                     <p class="text-white pb-3 animated zoomIn">This portal was built to fight against compromises on  academic certificate from kaduna polytechnic</p>
-                    <a href="" class="btn btn-outline-light rounded-pill border-2 py-3 px-5 animated slideInRight">Login to Verify Results</a>
+                    <a href="{% url 'auth:login' %}" class="btn btn-outline-light rounded-pill border-2 py-3 px-5 animated slideInRight">Login to Verify Results</a>
                 </div>
             </div>
         </div>
