--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -1,8 +1,8 @@
 {% load static %}
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-      <a class="navbar-brand brand-logo mr-5 ml-3 h3 mt-2" href="index.html"><img src="{% static 'img/kadlogo.png' %}" alt="Logo"> Kadpoly e-Verify</a>
-      <a class="navbar-brand brand-logo-mini" href="index.html">
+      <a class="navbar-brand brand-logo mr-5 ml-3 h3 mt-2" href="{% url 'e_verify:home' %}"><img src="{% static 'img/kadlogo.png' %}" alt="Logo"> Kadpoly e-Verify</a>
+      <a class="navbar-brand brand-logo-mini" href="{% url 'e_verify:home' %}">
         <img src="{% static 'img/kadlogo.png' %}" alt="Logo"> </a>
     </div>
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
