--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,6 +1,6 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'auth:dashboard' %}">
           <i class="icon-grid menu-icon"></i>
           <span class="menu-title">Dashboard</span>
@@ -64,8 +64,9 @@
       <li class="nav-item">
         <a class="nav-link"  style="cursor: pointer;" data-toggle="modal" data-target="#basicModal">
           <i class="icon-paper menu-icon"></i>
-          Logout
+          <span class="menu-title">Logout</span>
         </a>
+
       </li>
 
 
