--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -46,11 +46,11 @@
                 <div class="weather-info">
                   <div class="d-flex">
                     <div>
-                      <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>31<sup>C</sup></h2>
+                      <h2 class="mb-0 font-weight-normal"></h2>
                     </div>
                     <div class="ml-2">
-                      <h4 class="location font-weight-normal">Bangalore</h4>
-                      <h6 class="font-weight-normal">India</h6>
+                      <h4 class="location font-weight-normal">Nigeria</h4>
+                      <h6 class="font-weight-normal">Kaduna</h6>
                     </div>
                   </div>
                 </div>
