--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -19,7 +19,7 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Profile Information</h4>
-                  <img src="{{ request.user.picture.url }} " width="200" class="rounded mx-auto d-block" alt="...">
+                  <img src="{{ user.picture.url }}  " width="200" class="rounded mx-auto d-block" alt="...">
                   <h4 class="text-center mt-3">--- Other Information ---</h4>
                   <div class="card bg-light">
                     <div class="card-body">
