--- a/templates/e_verify/index.html
+++ b/templates/e_verify/index.html
@@ -25,27 +25,19 @@
                     </div>
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">About Kadploy e-Verify</div>
-                        <h2 class="mb-4">National Diploma Project</h2>
-                        <p class="mb-4">This is a project program for needed to obtained National Diploma, the persons involved are:</p>
+                        <h2 class="mb-4">HND Project</h2>
+                        <p class="mb-4">This is a project software needed to obtained Higher National Diploma:</p>
                         <div class="row g-3 mb-4">
                             <div class="col-12 d-flex">
                                 <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
                                     <i class="fa fa-user-tie text-white"></i>
                                 </div>
                                 <div class="ms-4">
-                                    <h6>Audu Daniel</h6>
-                                    <span>CST20HND0558</span>
+                                    <h6>AHMED ZUBAIRU </h6>
+                                    <span>CST21HND0694</span>
                                 </div>
                             </div>
-                            <div class="col-12 d-flex">
-                                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
-                                    <i class="fa fa-chart-line text-white"></i>
-                                </div>
-                                <div class="ms-4">
-                                    <h6>the-impossible</h6>
-                                    <span>CST20HND0558</span>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
