--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="text-center mb-5 mt-2">
                 &copy; <a href="{% url 'e_verify:home' %}" class="text-dark">Kadpoly e_Verify</a>, All Right Reserved.
-                Designed By <a href="https://htmlcodex.com" class="text-dark">HTML Codex</a>
+                Designed By the-impossible
             </div>
         </div>
     </div>
